# kintsugi

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/kintsugi_backend/: Cargo.toml  kintsugi_backend.did
src/kintsugi_backend/src/: handlers.rs  lib.rs  models.rs  report.rs  report_handlers.rs  report_storage.rs  storage.rs
src/kintsugi_frontend/: .env_example  assetstorage.did  index.html  package.json  vite.config.js
src/kintsugi_frontend/src/: App.jsx  main.jsx
src/kintsugi_frontend/src/components/: Button.jsx  Errormessage.jsx  Featuresection.jsx  Footer.jsx  Groupmanager.jsx  Header.jsx  Hero.jsx  Howitworks.jsx  Loadingindicator.jsx  Pagination.jsx  Protectedroute.jsx  ReportList.jsx  Reportactions.jsx  Reportdetails.jsx  Storiessection.jsx  Trustsection.jsx  chatbot.jsx
src/kintsugi_frontend/src/pages/: AdminDashboard.jsx  Dao.jsx  Form.jsx  Home.jsx  Login.jsx  Statistics.jsx
src/kintsugi_frontend/src/styles/: admin.css  button.css  chatbot.css  dao.css  features.css  footer.css  form.css  groupmanager.css  header.css  hero.css  howitworks.css  statistics.css  stories.css  styles.css  trust.css
