[package]
name = "kintsugi_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
ic-cdk = "0.12"
ic-cdk-macros = "0.5.0"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers